--- a/app/assets/stylesheets/components/_sidebar.scss
+++ b/app/assets/stylesheets/components/_sidebar.scss
@@ -1,7 +1,7 @@
 .sidebar {
   background-color: white;
   padding: 30px 20px;
-  border-right: 1px solid #8240FF;
+  border-right: 1px solid #eadeff;
   a:hover {
     text-decoration: none;
   }
@@ -21,5 +21,6 @@
   }
   .bar-lines {
     margin-top: 50px;
+
   }
 }
