--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -79,7 +79,7 @@
   <div class="container d-flex card-final align-items-center">
     <div class="cards-final w-50">
       <br>
-      <div class="card-final-2">
+      <div class="card-final-2" data-aos="fade-up" data-aos-duration="1000">
         <div class="d-flex nombre-text">
           <%= image_tag "robert_campos.png", class:"rounded" %>
           <h5>Robert Campos</h5>
@@ -99,7 +99,7 @@
         </div>
       </div>
       <br>
-      <div class="card-final-2">
+      <div class="card-final-2" data-aos="fade-up" data-aos-duration="1000">
         <div class="d-flex nombre-text">
           <%= image_tag "juan_manuel.jpg", class:"rounded" %>
           <h5>Juan Manuel Reyes</h5>
@@ -119,7 +119,7 @@
         </div>
       </div>
       <br>
-      <div class="card-final-2">
+      <div class="card-final-2" data-aos="fade-up" data-aos-duration="1000">
         <div class="d-flex nombre-text">
           <%= image_tag "andre_felipe.jpg", class:"rounded" %>
           <h5>Andrés Felipe Iriarte</h5>
