--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -102,7 +102,9 @@ body {
 }
 
 .card-final-2 {
-  box-shadow: 2px 2px 3px rgb(124, 119, 119);
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+    rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
   background-color: white;
   padding: 3%;
 }
