--- a/app/assets/stylesheets/pages/_recursos.scss
+++ b/app/assets/stylesheets/pages/_recursos.scss
@@ -1,6 +1,5 @@
 .recursos-grid {
   display: grid;
-  overflow: hidden;
   grid-template-columns: repeat(3, 1fr);
   grid-auto-rows: 1fr;
   grid-column-gap: 8px;
@@ -9,9 +8,10 @@
 
 .recursos-card {
   display: flex;
+  box-sizing: border-box;
   background-color: white;
-  margin: 3%;
-  padding: 5%;
+  margin: 10px;
+  padding: 20px;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
     rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
     rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
