--- a/app/views/pages/cursos.html.erb
+++ b/app/views/pages/cursos.html.erb
@@ -10,7 +10,7 @@
         <h5>Lineamientos Básicos de Citación</h5>
         <p>En este curso aprenderás los aspectos elementales para citar y después adaptarlos a las normas que necesites</p>
         <div class="text-center">
-          <a href="#" class="btn-yours-4">Ver detalles</a>
+          <a href="#" class="btn-yours-4">Comprar</a>
         </div>
       </div>
     </div>
@@ -20,7 +20,7 @@
         <h5>Estadística para tesis</h5>
         <p>Te brindamos las herramientas estadísitcas para procesar los resultados de tu tesis</p>
         <div class="text-center">
-          <a href="#" class="btn-yours-4">Ver detalles</a>
+          <a href="#" class="btn-yours-4">Comprar</a>
         </div>
       </div>
     </div>
@@ -30,7 +30,7 @@
         <h5>Asesor de Tesis</h5>
         <p>Te ofrecemos los aspectos básicos a tener en cuenta para sacar el máximo provecho a las entrevistas con tu asesor </p>
         <div class="text-center">
-          <a href="#" class="btn-yours-4">Ver detalles</a>
+          <a href="#" class="btn-yours-4">Comprar</a>
         </div>
       </div>
     </div>
@@ -40,7 +40,7 @@
         <h5>¿Cuanti o Cuali?</h5>
         <p>Selecciona la metodología ideal para tu tesis, te enseñamos lo que debes tener en cuenta</p>
         <div class="text-center">
-          <a href="#" class="btn-yours-4">Ver detalles</a>
+          <a href="#" class="btn-yours-4">Comprar</a>
         </div>
       </div>
     </div>
