--- a/app/views/simple_calendar/_month_calendar.html.erb
+++ b/app/views/simple_calendar/_month_calendar.html.erb
@@ -2,10 +2,10 @@
   <div class="d-flex align-items-center justify-content-between">
     <div class="calendar-heading my-2">
       <%= link_to t('simple_calendar.previous', default: 'Previous'), calendar.url_for_previous_view, class: 'btn btn-outline-primary' %>
-      <span class="calendar-title btn btn-primary"><%= t('date.month_names')[start_date.month] %> <%= start_date.year %></span>
-      <%= link_to t('simple_calendar.next', default: 'Next'), calendar.url_for_next_view, class: 'btn btn-outline-primary' %>
+      <span class="calendar-title"><%= t('date.month_names')[start_date.month] %> <%= start_date.year %></span>
+       <%= link_to t('simple_calendar.next', default: 'Next'), calendar.url_for_next_view, class: 'btn btn-outline-primary' %>
     </div>
-    <%= link_to 'Create meeting', new_meeting_path, class: 'btn btn-outline-warning' %>
+     <%= link_to 'Create meeting', new_meeting_path, class: 'btn btn-outline-warning' %>
   </div>
 
   <table class="table table-striped">
@@ -17,7 +17,7 @@
       </tr>
     </thead>
 
-    <tbody>
+    <tbody class="tabla_calendario">
       <% date_range.each_slice(7) do |dates| %>
         <tr>
           <% dates.each do |date| %>
