view de calendario

--- a/app/views/simple_calendar/_month_calendar.html.erb
+++ b/app/views/simple_calendar/_month_calendar.html.erb
@@ -1,11 +1,14 @@
 <div class="simple-calendar">
-  <div class="d-flex align-items-center justify-content-between">
-    <div class="calendar-heading my-2">
-      <%= link_to t('simple_calendar.previous', default: 'Previous'), calendar.url_for_previous_view, class: 'btn btn-outline-primary' %>
-      <span class="calendar-title"><%= t('date.month_names')[start_date.month] %> <%= start_date.year %></span>
-       <%= link_to t('simple_calendar.next', default: 'Next'), calendar.url_for_next_view, class: 'btn btn-outline-primary' %>
+  <div class="row">
+    <div class="col-4 text-center mt-2 mb-2">
+      <%= link_to t('simple_calendar.previous', default: 'Previous'), calendar.url_for_previous_view %>
     </div>
-     <%= link_to 'Create meeting', new_meeting_path, class: 'btn btn-outline-warning' %>
+    <div class="col-4 text-center mt-2 mb-2">
+      <h5><span class="calendar-title"><%= t('date.month_names')[start_date.month] %> <%= start_date.year %></span></h5>
+    </div>
+    <div class="col-4 text-center mt-2 mb-2">
+      <%= link_to t('simple_calendar.next', default: 'Next'), calendar.url_for_next_view %>
+    </div>
   </div>
 
   <table class="table table-striped">
@@ -29,4 +32,5 @@
       <% end %>
     </tbody>
   </table>
+  <p class="text-center"><%= link_to 'Crear reunión', new_meeting_path, class: 'btn-yours' %></p>
 </div>
