--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -11,7 +11,7 @@ body {
   height: 340px;
   border: 0px;
   h5 {
-    color: #6543ee;
+    color: #8240ff;
     font-family: "Poppins", sans-serif;
     text-align: center;
   }
@@ -39,7 +39,7 @@ body {
 
 .card-text-2 h2 {
   font-family: "Poppins", sans-serif;
-  color: #6543ee;
+  color: #8240ff;
   font-size: 41px;
   font-weight: bold;
 }
@@ -58,7 +58,7 @@ body {
   font-family: "Poppins", sans-serif;
   font-size: 41px;
   font-weight: bold;
-  color: #6543ee;
+  color: #8240ff;
 }
 
 .card-text-3 p {
@@ -161,4 +161,17 @@ body {
   padding: 4%;
   margin: 4%;
   padding-bottom: 6%;
+}
+
+.card-reunion {
+  padding: 3%;
+  background: white;
+  margin: auto;
+  width: 60%;
+  padding-bottom: 2%;
+}
+
+.container-reunion {
+  margin: 0 auto;
+  margin-top: -220px;
 }
