--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -23,7 +23,7 @@
           <p><i class="fas fa-angle-right fecha"></i><%= current_user.phone %></p>
         </div>
         <div class="col-6">
-        <% if current_user.photo %>
+        <% if current_user.photo.key %>
           <%= cl_image_tag current_user.photo.key, width:"300" %>
         <% else %>
           <%= image_tag "avatar-default.jpg", width:"300" %>
