estilos tabla teacher, modelo task:status

--- a/app/assets/stylesheets/components/_tablas.scss
+++ b/app/assets/stylesheets/components/_tablas.scss
@@ -1,3 +1,13 @@
 .table .thead-dark th {
   background-color: #8240ff;
 }
+
+.teacher {
+  td {
+    background-color: #f7f6fc;
+  }
+}
+
+.titulotabla {
+  color: black;
+}
