--- a/app/views/lines/_dashboard_teacher.html.erb
+++ b/app/views/lines/_dashboard_teacher.html.erb
@@ -37,7 +37,7 @@
       <!-- Inicio tabla datos alummni -->
       <div class="container">
         <h1>Tus asesorados</h1>
-          <table class="table">
+          <table class="table teacher">
             <thead class="thead-dark">
                 <tr>
                 <th scope="col">Avatar</th>
