--- a/app/views/lines/show.html.erb
+++ b/app/views/lines/show.html.erb
@@ -95,8 +95,8 @@
                 </div>
                 <div class="col-8">
                     <div class="container">
-                    <h1>Líneas</h1>
-                    <table class="table">
+                    <h1 class="titulotabla">Líneas</h1>
+                    <table class="table teacher">
                         <thead class="thead-dark">
                         <tr>
                             <th scope="col">No.</th>
